# Fringes-GUI

./: .gitignore  README.md  pyproject.toml
fringes_gui/: __init__.py  gui.py  logic.py  main.py  params.py  readme.txt  setters.py
tests/: test_gui.py
