[tool.poetry]
name = "Fringes-GUI"
version = "0.2.0"
description = "Graphical user interface for the 'fringes' package."
license = "CC-BY-NC-SA-4.0"
authors = ["Christian Kludt"]
readme = "README.md"
repository = "https://github.com/comimag/fringes-gui"
keywords = ["phase shifting", "fringe analysis", "fringe projection", "deflectometry", "computational imaging"]

[tool.poetry.dependencies]
python = "^3.10,<3.13"
# fringes = "^0.2.1, <0.2.2"
fringes = {path = "../fringes", develop = true}
pyqt6 = "^6.4.2"
pyqtgraph = "^0.13.2"
opencv-contrib-python = "^4.7.0"
pyyaml = "^6.0"
toml = "^0.10.2"
asdf = "^2.14.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
