[tool.poetry]
name = "Fringes-GUI"
version = "1.0.1"
description = "Graphical user interface for the 'fringes' package."
license = "CC-BY-NC-SA-4.0"
authors = ["Christian Kludt"]
readme = "README.md"
repository = "https://github.com/comimag/fringes-gui"
documentation = "https://fringes.readthedocs.io/en/latest/getting_started/usage.html#graphical-user-interface"
keywords = [
    "phase shifting",
    "phase unwrapping",
    "fringe analysis",
    "fringe projection",
    "deflectometry",
    "computational imaging"
]
classifiers = [
    "Topic :: Scientific/Engineering :: Image Processing",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research"
]

[tool.poetry.dependencies]
python = "^3.10,<3.13"
numpy = "^1.26.1"
pyqt6 = "^6.4.2"
pyqtgraph = "^0.13.2"
opencv-contrib-python = "^4.7.0"
asdf = "^3.0.1"
h5py = "^3.9.0"
toml = "^0.10.2"
fringes = "~1.1"  # todo: check versions
# fringes = {path = "../fringes", develop = true}

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[tool.poetry.group.tests.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
